Made the drawer responsive, removed scroll

--- a/app/views/map/tweetmap.html
+++ b/app/views/map/tweetmap.html
@@ -15,9 +15,9 @@
    <div id="map" >
  
     </div>
-    <div id="docDrawer" class="drawer dw-xs-3 dw-sm-3 dw-md-3 fold in drawer-right"  style="margin-top:10%; height:530px; z-index:+889;" aria-labelledby="docDrawer">
+    <div id="docDrawer" class="drawer hidden-xs hidden-sm dw-md-3 fold in drawer-right"  style="margin-top:10%; height:530px; z-index:+889;" aria-labelledby="docDrawer">
         <div class="drawer-controls" style="z-index:+888; top:100px;">
-            <a href="#docDrawer" data-toggle="drawer" href="#docDrawer" aria-foldedopen="false" aria-controls="docDrawer" class="btn btn-default"><i class="fa fa-align-justify"></i></a>
+            <a href="#docDrawer" data-toggle="drawer" href="#docDrawer" aria-foldedopen="false" aria-controls="docDrawer" class="btn btn-default hidden-xs hidden-sm"><i class="fa fa-align-justify"></i></a>
         </div>
         <div class="drawer-contents">
           <ul class="nav nav-pills" role="tablist">
