--- a/app/views/map/tweetmap.html
+++ b/app/views/map/tweetmap.html
@@ -16,7 +16,7 @@
  
     </div>
     <div id="docDrawer" class="drawer hidden-xs hidden-sm dw-md-3 fold in drawer-right"  style="margin-top:10%; height:530px; z-index:+889;" aria-labelledby="docDrawer">
-        <div class="drawer-controls" style="z-index:+888; top:100px;">
+        <div class="drawer-controls" style="z-index:+888;">
             <a href="#docDrawer" data-toggle="drawer" href="#docDrawer" aria-foldedopen="false" aria-controls="docDrawer" class="btn btn-default hidden-xs hidden-sm"><i class="fa fa-align-justify"></i></a>
         </div>
         <div class="drawer-contents">
