Added location name to the view

--- a/app/views/map/tweetmap.html
+++ b/app/views/map/tweetmap.html
@@ -37,6 +37,7 @@
             <div class="name-and-screen-name">
             <span class="home-user-name">{{follower.name}}</span><br>
             <span class="home-user-screen-name">@{{follower.screenname}}</span>
+            <span class="fa fa-map-marker text"> {{follower.location}}</span>
                         </div>
                    </div>
                    <div class="bottom-content">
@@ -72,6 +73,7 @@
             <div class="name-and-screen-name">
             <span class="home-user-name">{{following.name}}</span><br>
             <span class="home-user-screen-name">@{{following.screenname}}</span>
+            <span class="fa fa-map-marker text"> {{follower.location}}</span>
                         </div>
                    </div>
                    <div class="bottom-content">
