--- a/app/views/wall/wallCreationModal.html
+++ b/app/views/wall/wallCreationModal.html
@@ -70,10 +70,13 @@
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
-                                                    <label>Show statistics</label>
-                                                    <br>
-                                                    <toggle-switch class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="newWallOptions.showStatistics">
-                                                    </toggle-switch>
+                                                    <div class="row">
+                                                        <div class="col-xs-8 wall-file-upload"><input type='file' ng-model='newWallOptions.logo' accept="image/*" base-sixty-four-input>
+                                                        </div>
+                                                        <div class="col-xs-4">
+                                                            <img class="wall-preview-logo" data-ng-src="data:{{newWallOptions.logo.filetype}};base64,{{newWallOptions.logo.base64}}" />
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <!-- /.box-body -->
@@ -87,14 +90,13 @@
                                     <div>
                                         <div class="box-body">
                                             <div class="row">
-                                                <div class="col-xs-5">
+                                                <div class="col-xs-6">
                                                     <div class="wall-float-container">
                                                         <i class="fa fa-check-circle fa-3x wall-float-icon-contains"></i>
                                                         <div class="wall-float-text">
                                                             <h3>What do you want to show?<br><small>Add words, #hashtags, @mentions and from:user</small></h3>
                                                         </div>
                                                     </div>
-                                                    <h4 ng-if="newWallOptions.mainHashtagText.length>0">Main hashtag: <span class="label label-primary">{{newWallOptions.mainHashtag}}</span></h4>
                                                     <div class="form-group wall-tag-label-contain">
                                                         <label class="wall-contains-header">Show tweets that contain <strong>ALL</strong> of these</label>
                                                         <tags-input class="wall-tag-input" ng-model="newWallOptions.all" placeholder="Type and hit enter" name="ands"></tags-input>
@@ -103,10 +105,16 @@
                                                         <label class="wall-contains-header">Show tweets that contain <strong>ANY</strong> of these</label>
                                                         <tags-input class="wall-tag-input" ng-model="newWallOptions.any" placeholder="Type and hit enter" name="ands"></tags-input>
                                                     </div>
+                                                    <h3 style="margin-bottom: 10px;" ng-if="newWallOptions.mainHashtagText">Main hashtag: <span class="label label-primary">{{newWallOptions.mainHashtag}}</span></h3>
+                                                    <div class="form-group row">
+                                                        <h4 class="col-xs-9">Cycle/Repeat tweets
+                                                            <br><small>Do you want to constantly cycle Tweets so it always appears active? Will show only latest tweets if set to No.</small></h4>
+                                                        <toggle-switch class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="newWallOptions.cycle">
+                                                        </toggle-switch>
+                                                    </div>
+                                                    <hr>
                                                 </div>
-                                                <div class="col-xs-1 wall-vertical-line">
-                                                </div>
-                                                <div class="col-xs-5">
+                                                <div class="col-xs-6">
                                                     <div class="wall-float-container">
                                                         <i class="fa fa-minus-circle fa-3x wall-float-icon-not-contains"></i>
                                                         <div class="wall-float-text">
@@ -116,37 +124,40 @@
                                                         <label class="wall-not-contains-header">Show tweets that contain NONE of these</label>
                                                         <tags-input class="wall-tag-input" ng-model="newWallOptions.none" placeholder="Type and hit enter" name="ands"></tags-input>
                                                     </div>
-                                                    <div class="pre-scrollable" style="max-height:250px; overflow-x: hidden;">
+                                                    <h4>Coming Soon</h4>
+                                                    <div class="pre-scrollable wall-exclude-toggles" style="max-height:250px; overflow-x: hidden;">
                                                         <div class="form-group row">
-                                                            <label class="col-xs-6">Block tweets with profanity <small>Tweets containing profanity will go straight into the blocked queue and will not be displayed or placed in moderation.</small></label>
+                                                            <p class="col-xs-9">Block tweets with profanity
+                                                                <br><small>Tweets containing profanity will go straight into the blocked queue and will not be displayed or placed in moderation.</small></p>
                                                             <toggle-switch disabled="true" class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="newWallOptions.profanity">
                                                             </toggle-switch>
                                                         </div>
                                                         <div class="form-group row">
-                                                            <label class="col-xs-6">Block retweets <small>Retweets will not be shown or counted in the stats, they'll be immediately blocked.</small></label>
+                                                            <p class="col-xs-9">Block retweets
+                                                                <br><small>Retweets will not be shown or counted in the stats, they'll be immediately blocked.</small></p>
                                                             <toggle-switch disabled="true" class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="newWallOptions.blockRetweets">
                                                             </toggle-switch>
                                                         </div>
                                                         <div class="form-group row">
-                                                            <label class="col-xs-6">Hide retweets <small>Retweets will not be shown, but they WILL be counted in the stats and leaderboards.</small></label>
+                                                            <p class="col-xs-9">Hide retweets
+                                                                <br><small>Retweets will not be shown, but they WILL be counted in the stats and leaderboards.</small></p>
                                                             <toggle-switch disabled="true" class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="newWallOptions.hideRetweets">
                                                             </toggle-switch>
                                                         </div>
                                                         <div class="form-group row">
-                                                            <label class="col-xs-6">Follower threshold <small>Block any Tweets from people that have less than the number of followers you specify.</small></label>
-                                                            <input type="text" ng-model="newWallOptions.followerThreshold">
-                                                            <!-- <toggle-switch disabled="true" class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="newWallOptions.followerThreshold">
-                                                                </toggle-switch> -->
+                                                            <p class="col-xs-9">Follower threshold
+                                                                <br><small>Block any Tweets from people that have less than the number of followers you specify.</small></p>
+                                                            <input disabled="true" class="col-xs-2" type="text" ng-model="newWallOptions.followerThreshold">
                                                         </div>
                                                         <div class="form-group row">
-                                                            <label class="col-xs-6">Moderation <small>This gives you the ability to approve or deny every Tweet before it shows on your Tweet wall</small></label>
+                                                            <p class="col-xs-9">Moderation
+                                                                <br><small>This gives you the ability to approve or deny every Tweet before it shows on your Tweet wall</small></p>
                                                             <toggle-switch disabled="true" class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="newWallOptions.moderation">
                                                             </toggle-switch>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <hr>
                                             <!--                                             <div class="row">
                                                 <div class="form-group wall-media-toggle col-xs-6">
                                                     <label>Images</label>
@@ -176,14 +187,14 @@
                                 <div class="tab-pane" id="design">
                                     <div>
                                         <div class="box-body">
-                                            <div class="row pre-scrollable no-x-scroll wall-preview-container">
+                                            <div class="row wall-preview-container">
                                                 <div class="col-md-4">
                                                     <div>
                                                         <div class="box-header">
                                                             <label>Select a layout to customize</label>
                                                         </div>
                                                         <div class="box-body">
-                                                            <div >
+                                                            <div>
                                                                 <div class="row">
                                                                     <div class="col-md-6">
                                                                         <label class="layoutRadio">
@@ -228,7 +239,7 @@
                                                                             </select>
                                                                         </div>
                                                                         <div class="col-xs-6 form-group">
-                                                                            <label>Show statistics</label>
+                                                                            <label>Leaderboard</label>
                                                                             <br>
                                                                             <toggle-switch class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="newWallOptions.showStatistics">
                                                                             </toggle-switch>
@@ -237,14 +248,14 @@
                                                                     </div>
                                                                 </div>
                                                             </div>
-                                                            
                                                         </div>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-7 wall-preview animate-switch-container" ng-switch on="newWallOptions.headerPosition">
                                                     <div ng-switch-when="Top" ng-style="{'background-color': newWallOptions.headerColour} " class="row wall-preview-header">
                                                         <div ng-style="{'color': newWallOptions.headerForeColour} " class="preview-hashtag col-md-4">{{newWallOptions.mainHashtag}}</div>
-                                                        <div ng-style="{'color': newWallOptions.headerForeColour} " class="preview-event-name col-md-4">{{newWallOptions.eventName}}</div>
+                                                        <div ng-style="{'color': newWallOptions.headerForeColour} " class="preview-event-name col-md-4"><img class="wall-preview-logo" data-ng-src="data:{{newWallOptions.logo.filetype}};base64,{{newWallOptions.logo.base64}}" /><br>
+                                                        {{newWallOptions.eventName}}</div>
                                                         <div ng-style="{'color': newWallOptions.headerForeColour} " class="preview-banner col-md-4">Loklak</div>
                                                     </div>
                                                     <div class="row animate-switch-container" ng-switch on="newWallOptions.layoutStyle">
@@ -255,7 +266,7 @@
                                                     </div>
                                                     <div ng-switch-when="Bottom" ng-style="{'background-color': newWallOptions.headerColour} " class="row wall-preview-header">
                                                         <div ng-style="{'color': newWallOptions.headerForeColour} " class="preview-hashtag col-md-4">{{newWallOptions.mainHashtag}}</div>
-                                                        <div ng-style="{'color': newWallOptions.headerForeColour} " class="preview-event-name col-md-4">{{newWallOptions.eventName}}</div>
+                                                        <div ng-style="{'color': newWallOptions.headerForeColour} " class="preview-event-name col-md-4"><img class="wall-preview-logo" data-ng-src="data:{{newWallOptions.logo.filetype}};base64,{{newWallOptions.logo.base64}}" /><br>{{newWallOptions.eventName}}</div>
                                                         <div ng-style="{'color': newWallOptions.headerForeColour} " class="preview-banner col-md-4">Loklak</div>
                                                     </div>
                                                 </div>
