--- a/app/views/wall/templates/wallThumbnail.html
+++ b/app/views/wall/templates/wallThumbnail.html
@@ -1,7 +1,7 @@
 <div class="wall-thumbnail col-xs-3">
     <img src="images/loklak_icon_yellow_45x45_transparent.png" class="sq-setter-w" />
     <div class="wall-thumbnail-content">
-        <a target="_blank" ng-href="{{data.link}}">
+        <a target="_blank" ng-href="{{screenName}}/wall/{{data.id}}">
             <div ng-style="{'background-color': data.headerColour, 'color': data.headerForeColour}" class="wall-thumbnail-event-name">{{data.eventName}}</div>
             <h4 class="wall-thumbnail-mainhashtag">{{data.mainHashtag}}</h4>
         </a>
