--- a/app/views/wall/wallCreationModal.html
+++ b/app/views/wall/wallCreationModal.html
@@ -34,7 +34,7 @@
                                                     <div class="form-inline">
                                                         <div class="input-group dropdown">
                                                             <span class="input-group-addon">
-                                                  <span class="glyphicon glyphicon-calendar"></span>
+                                                  <span class="fa fa-calendar"></span>
                                                             </span>
                                                             <a class="dropdown-toggle my-toggle-select" id="datetimepicker1" role="button" data-toggle="dropdown" data-target="#" href="">
                                                                 <div class="input-append">
@@ -48,7 +48,7 @@
                                                         &nbsp-&nbsp
                                                         <div class="input-group dropdown">
                                                             <span class="input-group-addon">
-                                              <span class="glyphicon glyphicon-calendar"></span>
+                                              <span class="fa fa-calendar"></span>
                                                             </span>
                                                             <a class="dropdown-toggle my-toggle-select" id="datetimepicker2" role="button" data-toggle="dropdown" data-target="#" href="">
                                                                 <div class="input-append">
