Add activity feed, change pos of controls, add control layer bg img

--- a/app/views/map/tweetmap.html
+++ b/app/views/map/tweetmap.html
@@ -1,7 +1,27 @@
 
 <div class="content-wrapper map-view">
    <div id="map"></div>
+
+   <!-- What is this and why the innecssary inline styling? -->
    <div id="TweetBox" style="position:absolute; top:10%;left:15%; max-width:50%; border:2px;"></div>
+
+   <div class="activity-feed">
+		<div class="feed-header">
+			<p>Activity feeds</p>
+		</div>	
+		<div class="feed-content">
+			<div ng-repeat="status in root.twitterFriends.data | limitTo: 20">
+			    <div class="item">
+			        <img class="friend-profile-img" src="{{status.profile_image_url}}">
+			        <p class="message home-tweet-text">
+			        <span class="home-user-screen-name">@{{ status.screen_name }} - {{ status.status.created_at | tweetFromNow }}</span>
+			        <br>
+			        <span ng-bind-html="status.status.text | tweetTextLink | tweetMention | tweetHashtag | removeTwitterPicLink | toTrusted "></span>
+			        </p>
+			    </div>
+			</div>
+		</div>
+	</div>
 </div>
 
 
