--- a/app/views/data-connect/data-connect-modal.html
+++ b/app/views/data-connect/data-connect-modal.html
@@ -60,6 +60,7 @@
 									</div>
 									<button type="submit" class="btn btn-primary">Confirm</button>
 									<button ng-click="toggleAddForm()" type="button" class="btn btn-default">Cancel</button>
+									<a type="button" class="btn btn-danger" ng-href="/addConnection" target="_blank">Add source in other format</a>
 								</form>
 							</div>
 							<h2>Active Data Sources</h2>
