Added location for following

--- a/app/views/map/tweetmap.html
+++ b/app/views/map/tweetmap.html
@@ -73,7 +73,7 @@
             <div class="name-and-screen-name">
             <span class="home-user-name">{{following.name}}</span><br>
             <span class="home-user-screen-name">@{{following.screenname}}</span>
-            <span class="fa fa-map-marker text"> {{follower.location}}</span>
+            <span class="fa fa-map-marker text"> {{following.location}}</span>
                         </div>
                    </div>
                    <div class="bottom-content">
