--- a/app/styles/_leaflet.scss
+++ b/app/styles/_leaflet.scss
@@ -277,13 +277,14 @@
 	background: #fff;
 	border-radius: 5px;
 	}
+
 .leaflet-control-layers-toggle {
-	background-image: url(images/layers.png);
+	background-image: url('../images/layers.png');
 	width: 36px;
 	height: 36px;
 	}
 .leaflet-retina .leaflet-control-layers-toggle {
-	background-image: url(images/layers-2x.png);
+	background-image: url('../images/layers.png');
 	background-size: 26px 26px;
 	}
 .leaflet-touch .leaflet-control-layers-toggle {
