--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -87,8 +87,7 @@
             <span  class="btn btn-default btn-file fa pull-left">
                 <input type="file" id="fileInput" name="imageUpload" ng-model="root.imageUpload">&nbsp;&#xf030; Add Photo
             </span>
-            <input type="button" class="fa btn btn-info btn-flat pull-left"  ng-click="root.getLocation()" value="&#xf041; Tweet with Map Location">&nbsp;
-            <input type="button" class="fa btn btn-info btn-flat pull-left"  ng-click="root.tweetMarkdown()" value="Tweet as Markdown">&nbsp;
+            <input type="button" class="fa btn btn-info btn-flat pull-left"  ng-click="root.getLocation()" value="&#xf041; Add Location">&nbsp;
             <input type="submit" class="btn btn-info btn-flat" value="Tweet">&nbsp;
         </div>
         </form>
