--- a/app/styles/_wall.scss
+++ b/app/styles/_wall.scss
@@ -197,8 +197,14 @@
 }
 
 .wall-preview-logo {
-    max-height: 50px;
-    max-width: 50px;
+    height: 50px;
+    max-width: 100px;
+}
+
+.wall-thumbnail-logo {
+    @extend .wall-preview-logo;
+    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAHUlEQVQIW2M8fer0TFMz03QYzcjAwMCALMhIUAUAAQYd92It1YAAAAAASUVORK5CYII=
+) repeat;
 }
 
 .wall-file-upload {
@@ -241,6 +247,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.wall-header-eventname {
+    padding: 0;
 }
 
 .wall-body {
