--- a/app/styles/_wall.scss
+++ b/app/styles/_wall.scss
@@ -199,12 +199,66 @@
 .wall-preview-logo {
     height: 50px;
     max-width: 100px;
+    margin-top: -10px;
+    margin-bottom: 10px;
 }
 
 .wall-thumbnail-logo {
     @extend .wall-preview-logo;
     background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAHUlEQVQIW2M8fer0TFMz03QYzcjAwMCALMhIUAUAAQYd92It1YAAAAAASUVORK5CYII=
 ) repeat;
+}
+
+.wall-thumbnail-loading {
+    height: 250px;
+    position: absolute;
+    left: 0;
+    opacity: 0.8;
+    margin-right: 20px;
+    display: block;
+    width: 250px;
+    background-color: grey;
+    z-index: 1;
+}
+
+.spinner {
+  text-align: center;
+}
+
+.spinner > div {
+  width: 18px;
+  height: 18px;
+  background-color: #333;
+  margin-top: 50%;
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% { 
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  } 40% { 
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+  }
 }
 
 .wall-file-upload {
@@ -228,7 +282,7 @@
 /*Wall display */
 
 .wall-header {
-    min-height: 100px;
+    min-height: 120px;
     background-color: #3c8dbc;
     display: flex;
     flex-direction: row;
