Added extra check for twitterSession and removed white loading spinner

--- a/app/views/wall/create.html
+++ b/app/views/wall/create.html
@@ -9,7 +9,7 @@
         <section class="content">
             <div class="row" style="clear: both;">
                 <h1 style="float:left;margin-top:0px;">My Twitter Walls</h1>
-                <button style="float:right;" type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#wall-modal">Create a new wall</button>
+                <button ng-show="root.twitterSession" style="float:right;" type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#wall-modal">Create a new wall</button>
             </div>
             <div ng-hide="root.twitterSession" style="margin-top: 20px;" class="well alert alert-info">
                 <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
@@ -19,7 +19,7 @@
                 <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
                 <strong>You haven't created any walls yet.</strong>
             </div>
-            <div ng-if="userWalls.length>0" class="row wall-thumbnail-container">
+            <div ng-show="root.twitterSession" ng-if="userWalls.length>0" class="row wall-thumbnail-container">
                 <div ng-repeat="wallObj in userWalls" data="wallObj" delete-wall="deleteWall($index)" edit-wall="editWall($index)" screen-name="screen_name" wallthumbnail>
                 </div>
             </ul>
