--- a/app/styles/_data-connect.scss
+++ b/app/styles/_data-connect.scss
@@ -99,3 +99,10 @@
 #add-connection-form h2 code {
 	cursor: pointer;
 }
+
+#add-connection-form h2 i {
+	font-size: 16px;
+	vertical-align: middle;
+	color: gray;
+	cursor: pointer;
+}
