--- a/app/views/map/tweetmap.html
+++ b/app/views/map/tweetmap.html
@@ -9,13 +9,13 @@
 			<p>Activity feeds</p>
 		</div>	
 		<div class="feed-content">
-			<div ng-repeat="status in root.twitterFriends.data | limitTo: 20">
+			<div ng-repeat="status in root.twitterFriends.data | limitTo: 20" ng-attr-id="{{status.id}}" ng-click="map.openPopup(status.id);">
 			    <div class="item">
 			        <img class="friend-profile-img" src="{{status.profile_image_url}}">
 			        <p class="message home-tweet-text">
 			        <span class="home-user-screen-name">@{{ status.screen_name }} - {{ status.status.created_at | tweetFromNow }}</span>
 			        <br>
-			        <span ng-bind-html="status.status.text | tweetTextLink | tweetMention | tweetHashtag | removeTwitterPicLink | toTrusted "></span>
+			        <span ng-click  ng-bind-html="status.status.text | tweetTextLink | tweetMention | tweetHashtag | removeTwitterPicLink | toTrusted "></span>
 			        </p>
 			    </div>
 			</div>
