--- a/app/views/map/tweetmap.html
+++ b/app/views/map/tweetmap.html
@@ -1,9 +1,6 @@
 <div class="content-wrapper map-view">
    <div id="map"></div>
 
-   <!-- What is this and why the innecssary inline styling? -->
-   <div id="TweetBox" style="position:absolute; top:10%;left:15%; max-width:50%; border:2px;"></div>
-
    <div class="activity-feed">
 		<div class="feed-header">
 			<p>Activity feeds</p>
@@ -15,10 +12,16 @@
 			        <p class="message home-tweet-text">
 			        <span class="home-user-screen-name">@{{ status.screen_name }} - {{ status.status.created_at | tweetFromNow }}</span>
 			        <br>
-			        <span ng-click  ng-bind-html="status.status.text | tweetTextLink | tweetMention | tweetHashtag | removeTwitterPicLink | toTrusted "></span>
+			        <span ng-bind-html="status.status.text | tweetTextLink | tweetMention | tweetHashtag | removeTwitterPicLink | toTrusted "></span>
 			        </p>
 			    </div>
 			</div>
 		</div>
 	</div>
+
+    <div class="location-fail-notice">
+    	<div class="warning-sign"><i class="fa fa-exclamation-triangle"></i></div>
+    	<p class="notice-text">The user you're searching for doesn't seem to have location enabled!</p>
+    </div>
+
 </div>
