--- a/app/views/data-connect/data-connect.html
+++ b/app/views/data-connect/data-connect.html
@@ -5,7 +5,7 @@
 
 	<div class="container-fluid content-container">
 		<div id="data-connect-panel">
-			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#data-connect-modal">My Connections</button>
+			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#data-connect-modal" ng-click="onUpdateDataSources()">My Connections</button>
 
 			<a type="button" class="btn btn-default btn-lg" ng-href="/addConnection">Add Connection</a>
 		</div>
